fixes overflow hidden not working on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,9 @@ body, * {
 
 .carousel-wrapper {
   overflow: hidden;
+  // explicitly config relative position in safari. Other way overflow hidden will
+  // not work
+  position: relative;
   width: 100%;
 
   & * {
